--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dio: ^4.0.6
   card_swiper: ^2.0.4
   hive_flutter: ^1.1.0
+  audio_session: ^0.1.13
 
 dev_dependencies:
   flutter_test:
